Adjusting image pathing to point to github

--- a/templates/storeUI.html
+++ b/templates/storeUI.html
@@ -102,35 +102,35 @@
         }
         
         #submitButton {
-            background-image: url('storegenerator/static/images/StoreGeneratorSubmitButton.png');
+            background-image: url('https://media.githubusercontent.com/media/Drakosfire/StoreGenerator/main/static/images/StoreGeneratorSubmitButton.png');
             
         }
 
         #autofillButton {
-            background-image: url('storegenerator/static/images/StoreGeneratorAutofillButton.png');
+            background-image: url('https://media.githubusercontent.com/media/Drakosfire/StoreGenerator/main/static/images/StoreGeneratorAutofillButton.png');
         }
 
         #toggleButton {
-            background-image: url('storegenerator/static/images/StoreGeneratorToggleTextButton.png');
+            background-image: url('https://media.githubusercontent.com/media/Drakosfire/StoreGenerator/main/static/images/StoreGeneratorToggleTextButton.png');
             width: 75px;
         }
 
         #addPageButton {
-            background-image: url('storegenerator/static/images/StoreGeneratorAddPageButton.png');
+            background-image: url('https://media.githubusercontent.com/media/Drakosfire/StoreGenerator/main/static/images/StoreGeneratorAddPageButton.png');
             width: 60px;
         }
 
         #removePageButton {
-            background-image: url('storegenerator/static/images/StoreGeneratorRemovePageButton.png');
+            background-image: url('https://media.githubusercontent.com/media/Drakosfire/StoreGenerator/main/static/images/StoreGeneratorRemovePageButton.png');
             width: 60px;
         }
 
         #resetButton {
-            background-image: url('storegenerator/static/images/StoreGeneratorResetlButton.png');
+            background-image: url('https://media.githubusercontent.com/media/Drakosfire/StoreGenerator/main/static/images/StoreGeneratorResetlButton.png');
         }
 
         #printButton {
-            background-image: url('storegenerator/static/images/StoreGeneratorPrintButton.png');
+            background-image: url('https://media.githubusercontent.com/media/Drakosfire/StoreGenerator/main/static/images/StoreGeneratorPrintButton.png');
             width: 80px;
         }
     
@@ -150,11 +150,11 @@
                 title="As much or as little description as you want to provide. You can provide specific employees, inventory etc">A very standard gear store run by a fae potted plant named Gorgeous
                 </textarea>
                 <button id="submitButton" class="button-with-image">
-                    <img src="storegenerator/static/images/StoreGeneratorSubmitButton.png" alt="Submit Button" aria-hidden="true">
+                    <img src="https://media.githubusercontent.com/media/Drakosfire/StoreGenerator/main/static/images/StoreGeneratorSubmitButton.png" alt="Submit Button" aria-hidden="true">
                 </button>
                 
             </div>
-            <img src="storegenerator/static/images/StoreGeneratorLogo.png" alt="Store Generator Logo" class="logo">
+            <img src="https://media.githubusercontent.com/media/Drakosfire/StoreGenerator/main/static/images/StoreGeneratorLogo.png" alt="Store Generator Logo" class="logo">
             <div class="button-container button-container-bottom">
                 <button id="autofillButton" class="button-with-image">Autofill Pages</button>
                 <button id="addPageButton" class="button-with-image">Add New Page</button>
