--- a/templates/storeUI.html
+++ b/templates/storeUI.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="{{ css_files.all_css }}" rel="stylesheet">
-    <link href="{{ css_files.font_css }}" rel="stylesheet">
-    <link href="{{ css_files.bundle_css }}" rel="stylesheet">
-    <link href="{{ css_files.style_css }}" rel="stylesheet">
-    <link href="{{ css_files.phb_style_css }}" rel="stylesheet">
-    <link href="{{ css_files.store_ui_css }}" rel="stylesheet">
+    <link href="./static/styles/all.css" rel="stylesheet">
+    <link href="./static/styles/font.css" rel="stylesheet">
+    <link href="./static/styles/bundle.css" rel="stylesheet">
+    <link href="./static/styles/style.css" rel="stylesheet">
+    <link href="./static/styles/phb_style.css" rel="stylesheet">
+    <link href="./static/store_ui_css" rel="stylesheet">
     <title>DnD Store Generator</title>
     <script src="https://unpkg.com/htmx.org@1.7.0/dist/htmx.min.js"></script>
 
