Fixed path to storeUI.css

--- a/templates/storeUI.html
+++ b/templates/storeUI.html
@@ -9,7 +9,7 @@
     <link href="../storegenerator/static/css/bundle.css" rel="stylesheet">
     <link href="../storegenerator/static/css/style.css" rel="stylesheet">
     <link href="../storegenerator/static/css/phb_style.css" rel="stylesheet">
-    <link href="../storegenerator/static/css/store_ui_css" rel="stylesheet">
+    <link href="../storegenerator/static/css/storeUI.css" rel="stylesheet">
 
     <title>DnD Store Generator</title>
     <script src="https://unpkg.com/htmx.org@1.7.0/dist/htmx.min.js"></script>
