--- a/static/storegenerator/css/storeUI.css
+++ b/static/storegenerator/css/storeUI.css
@@ -187,12 +187,38 @@ textarea {
     font-size: .34cm;
     counter-increment: phb-page-numbers;
     background-color: var(--HB_Color_Background);
-    background-image: url('/static/storegenerator/storegenerator/themes/assets/parchmentBackground.jpg');
+    background-image: url('https://imagedelivery.net/SahcvrNe_-ej4lTB6vsAZA/a45523f4-8616-4dee-44f2-602cca99d400/public');
     text-rendering: optimizeLegibility;
     page-break-before: always;
     page-break-after: always;
     contain: size;
 
+}
+
+.page .classTable.frame {
+    width: calc(100% + .2cm);
+    margin-top: .7cm;
+    margin-right: -0.1cm;
+    margin-bottom: .9cm;
+    margin-left: -0.1cm;
+    border-collapse: separate;
+    background-color: white;
+    border: initial;
+    border-top-style: initial;
+    border-right-style: initial;
+    border-bottom-style: initial;
+    border-left-style: initial;
+    border-image-outset: initial;
+    border-image-repeat: initial;
+    border-image-slice: initial;
+    border-image-source: initial;
+    border-image-width: initial;
+    border-style: solid;
+    border-image-source: url('https://imagedelivery.net/SahcvrNe_-ej4lTB6vsAZA/356fe093-3cb9-45f6-8f2e-cbe81dd1ee00/blogpost');
+    border-image-slice: 200;
+    border-image-width: 47px;
+    border-image-outset: .4cm .3cm;
+    border-image-repeat: stretch;
 }
 
 .page .monster hr:last-of-type+* {
@@ -639,6 +665,7 @@ div[contenteditable="true"] p::first-letter {
     /* Ensure content overflow is visible */
     width: 100%;
     /* Ensure it takes the full width of the container */
+    border-image: url('https://imagedelivery.net/SahcvrNe_-ej4lTB6vsAZA/556fe3f0-c0a3-46d9-6930-6bc3ab07f000/public') 14 round;
 
 }
 
