--- a/static/storegenerator/css/style.css
+++ b/static/storegenerator/css/style.css
@@ -7,56 +7,56 @@
 
 @font-face {
     font-family: BookInsanityRemake;
-    src: url('/static/storegenerator/themes/fonts/5e/Bookinsanity Bold.woff2');
+    src: url('/static/storegenerator/themes/fonts/5e/BookinsanityBold.woff2');
     font-weight: bold;
     font-style: normal
 }
 
 @font-face {
     font-family: BookInsanityRemake;
-    src: url('/static/storegenerator/themes/fonts/5e/Bookinsanity Italic.woff2');
+    src: url('/static/storegenerator/themes/fonts/5e/BookinsanityItalic.woff2');
     font-weight: normal;
     font-style: italic
 }
 
 @font-face {
     font-family: BookInsanityRemake;
-    src: url('/static/storegenerator/themes/fonts/5e/Bookinsanity Bold Italic.woff2');
+    src: url('/static/storegenerator/themes/fonts/5e/BookinsanityBoldItalic.woff2');
     font-weight: bold;
     font-style: italic
 }
 
 @font-face {
     font-family: ScalySansRemake;
-    src: url('/static/storegenerator/themes/fonts/5e/Scaly Sans.woff2');
+    src: url('/static/storegenerator/themes/fonts/5e/ScalySans.woff2');
     font-weight: normal;
     font-style: normal
 }
 
 @font-face {
     font-family: ScalySansRemake;
-    src: url('/static/storegenerator/themes/fonts/5e/Scaly Sans Bold.woff2');
+    src: url('/static/storegenerator/themes/fonts/5e/ScalySansBold.woff2');
     font-weight: bold;
     font-style: normal
 }
 
 @font-face {
     font-family: ScalySansRemake;
-    src: url('/static/storegenerator/themes/fonts/5e/Scaly Sans Italic.woff2');
+    src: url('/static/storegenerator/themes/fonts/5e/ScalySansItalic.woff2');
     font-weight: normal;
     font-style: italic
 }
 
 @font-face {
     font-family: ScalySansRemake;
-    src: url('/static/storegenerator/themes/fonts/5e/Scaly Sans Bold Italic.woff2');
+    src: url('/static/storegenerator/themes/fonts/5e/ScalySansBoldItalic.woff2');
     font-weight: bold;
     font-style: italic
 }
 
 @font-face {
     font-family: ScalySansSmallCapsRemake;
-    src: url('/static/storegenerator/themes/fonts/5e/Scaly Sans Caps.woff2');
+    src: url('/static/storegenerator/themes/fonts/5e/ScalySansCaps.woff2');
     font-weight: normal;
     font-style: normal
 }
@@ -70,56 +70,56 @@
 
 @font-face {
     font-family: MrEavesRemake;
-    src: url('/static/storegenerator/themes/fonts/5e/Mr Eaves Small Caps.woff2');
+    src: url('/static/storegenerator/themes/fonts/5e/MrEavesSmallCaps.woff2');
     font-weight: normal;
     font-style: normal
 }
 
 @font-face {
     font-family: SolberaImitationRemake;
-    src: url('/static/storegenerator/themes/fonts/5e/Solbera Imitation Tweak.woff2');
+    src: url('/static/storegenerator/themes/fonts/5e/SolberaImitationTweak.woff2');
     font-weight: normal;
     font-style: normal
 }
 
 @font-face {
     font-family: NodestoCapsCondensed;
-    src: url('/static/storegenerator/themes/fonts/5e/Nodesto Caps Condensed.woff2');
+    src: url('/static/storegenerator/themes/fonts/5e/NodestoCapsCondensed.woff2');
     font-weight: normal;
     font-style: normal
 }
 
 @font-face {
     font-family: NodestoCapsCondensed;
-    src: url('/static/storegenerator/themes/fonts/5e/Nodesto Caps Condensed Bold.woff2');
+    src: url('/static/storegenerator/themes/fonts/5e/NodestoCapsCondensedBold.woff2');
     font-weight: bold;
     font-style: normal
 }
 
 @font-face {
     font-family: NodestoCapsCondensed;
-    src: url('/static/storegenerator/themes/fonts/5e/Nodesto Caps Condensed Italic.woff2');
+    src: url('/static/storegenerator/themes/fonts/5e/NodestoCapsCondensedItalic.woff2');
     font-weight: normal;
     font-style: italic
 }
 
 @font-face {
     font-family: NodestoCapsCondensed;
-    src: url('/static/storegenerator/themes/fonts/5e/Nodesto Caps Condensed Bold Italic.woff2');
+    src: url('/static/storegenerator/themes/fonts/5e/NodestoCapsCondensedBoldItalic.woff2');
     font-weight: bold;
     font-style: italic
 }
 
 @font-face {
     font-family: NodestoCapsWide;
-    src: url('/static/storegenerator/themes/fonts/5e/Nodesto Caps Wide.woff2');
+    src: url('/static/storegenerator/themes/fonts/5e/NodestoCapsWide.woff2');
     font-weight: normal;
     font-style: normal
 }
 
 @font-face {
     font-family: Overpass;
-    src: url('/static/storegenerator/themes/fonts/5e/Overpass Medium.woff2');
+    src: url('/static/storegenerator/themes/fonts/5e/OverpassMedium.woff2');
     font-weight: 500;
     font-style: normal
 }
